infra/k8s/toy-infra/kibana/kibana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana
  namespace: toy-infra
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  rules:
    - host: kibana.homelab.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-kibana-kb-http
                port:
                  number: 5601

# 但这里有个跟kafka-ui不一样的地方要留意：Kibana的Service本身也是HTTPS(ECK默认给所有组件都开了TLS)，nginx-ingress默认是按HTTP方式转发到后端的，
# 如果后端实际监听的是HTTPS，需要多加一个annotation告诉nginx"往后端转发时也用HTTPS协议"
